Update .travis.sh